--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ APP_SECRET=a782f3918c0fd6136696556fb93c9dc9
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/cours_symfony_2022"
+DATABASE_URL="mysql://root:root@127.0.0.1:8889/cours_symfony_2022"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
